align fix

--- a/components/Login/login.scss
+++ b/components/Login/login.scss
@@ -15,7 +15,7 @@
   align-items: center;
   @media (max-width: "767px") {
     padding: 20px;
-    display: block;
+    // display: block;
   }
   .login-box {
     width: 40%;
